Add Flowdock notifications from Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
-script: bundle exec rspec
 language: ruby
-
 rvm: 2.1.5
-
 before_install:
-  - cd $TRAVIS_BUILD_DIR/db && wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz && gunzip GeoLite2-City.mmdb.gz
-  - cd $TRAVIS_BUILD_DIR
-
+- cd $TRAVIS_BUILD_DIR/db && wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz
+  && gunzip GeoLite2-City.mmdb.gz
+- cd $TRAVIS_BUILD_DIR
 install: bundle install --deployment --jobs 4
 cache:
   directories:
-    - vendor/bundle
-
+  - vendor/bundle
 before_script:
-  - unset RACK_ENV
-
+- unset RACK_ENV
 script: bundle exec rspec
+notifications:
+  flowdock:
+    secure: MMpQnoJ0m0vAVuQ+2T1i/i4eL6zSRmEma7cX6sCbbCcGVL9IAGsnC3UC2bMsO8pkadD5mXz9cX9JVRpzuto6DhWlvmSTw8zsHbjwEYsD5MlAkhApN2jq/AX3cLZmOTn6i2ZzrQnHhhaOgygnRWHaqT1sa7rQKlbrKOaRRKCFAGM=
