--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 - cd $TRAVIS_BUILD_DIR/db && wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz
   && gunzip GeoLite2-City.mmdb.gz
 - cd $TRAVIS_BUILD_DIR
+- gem update bundler
 install: bundle install --deployment --jobs 4
 cache:
   directories:
