--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: ruby
-rvm: 2.1.5
+rvm: 2.3.5
 before_install:
 - cd $TRAVIS_BUILD_DIR/db && wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz
   && gunzip GeoLite2-City.mmdb.gz
 - cd $TRAVIS_BUILD_DIR
 - gem update bundler
-install: bundle install --deployment --jobs 4
+install: bundle install --jobs 4
 cache:
   directories:
   - vendor/bundle
